examples/error-codes/syntax-error/SE-CID1-good.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.
#include<stdio.h>

int main(void){
	printf("%d\n", 0);
	return 0;
}
